<resources>
    <string name="app_name">NASApp</string>
    <string name="feature_image">feature image</string>
    <string name="info">Info</string>
    <string name="start">Start</string>
    <string name="rover_postcard_maker_feature">See pictures from Mars Rover and create your postcard using one of the pictures!</string>
    <string name="eye_in_the_sky_feature">Chose location on the interactive map and see the most recent photo of the chosen location!</string>
    <string name="asteroid_alert_feature">Find asteroids approaching the Earth soon and send your friends alert by SMS!</string>
    <string name="ok">OK</string>
    <string name="rover_name">Rover \"%s\"</string>
    <string name="create_postcard">Create postcard</string>
    <string name="selected_photo_sign">selected photo sign</string>
    <string name="postcard_from_mars">Postcard from Mars</string>
    <string name="eye_in_the_sky">Eye-In-the-Sky</string>
    <string name="asteroid_alert">Asteroid alert</string>
    <string name="post_card_image">post card image</string>
    <string name="postcard_hint">Enter yout postcard text here</string>
    <string name="send_postcard">Send postcard</string>
    <string name="photo_date">Date: %s</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDzeFzuDMM-LIe7ZUSYDsw9WF7b8gH7mQM
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="get_photo_from_satellite">GET PHOTO FROM SATELLITE</string>
    <string name="satellite_photo_on_selected_latitude_and_longitude">Satellite photo on selected latitude and longitude</string>
    <string name="asteroids_period_info">Asteroids approaching Earth in the next 7 days</string>
    <string name="send_alert">SEND ALERT</string>
    <string name="name">Name:</string>
    <string name="diameter">Diameter:</string>
    <string name="velocity">Velocity:</string>
    <string name="approach_date">Approach date:</string>
    <string name="miss_distance">Miss distance:</string>
    <string name="potentially_hazardous">HAZARDOUS!</string>
    <string name="not_hazardous">NOT  HAZARDOUS</string>
    <string name="asteroid_velocity">%s km/s</string>
    <string name="asteroid_diameter">%1$s - %2$s meters</string>
    <string name="asteroid_miss_distance">%s distances to the Moon</string>

    <string-array name="sort_asteroids_array">
        <item>Show all</item>
        <item>Show hazardous</item>
    </string-array>

    <string-array name="text_colors">
        <item>Black hole black</item>
        <item>Earth blue</item>
        <item>Mars red</item>
        <item>Moon grey</item>
        <item>Sun orange</item>
        <item>Via lactea white</item>
    </string-array>

    <string name="send_sms_alert">Send SMS alert</string>
    <string name="sms_text">Asteroid %1$sm in diameter is rushing to the Earth at speed %2$s km/s. NASA tells it would miss, but what if they\'re wrong?</string>
    <string name="enter_phone_here">Enter phone here</string>
    <string name="sms_text_hint">SMS text:</string>
    <string name="mars_image_transition_name">marsRoverImage</string>
    <string name="internet_error_message">Some error occurred. Please check your internet connection and try again.</string>
    <string name="lat_long_input_error_message">Some error occurred. Please check latitude and longitude and try again.</string>
    <string name="text_color">Text color:</string>

</resources>
