<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

   <RelativeLayout
        android:id="@+id/postCardRelativeLayout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/postCardImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/post_card_image"/>

        <TextView
            android:id="@+id/postCardTextView"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

   </RelativeLayout>

       <EditText
           android:id="@+id/postCardEditText"
           android:hint="@string/postcard_hint"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/submitButton"
            android:text="@string/send_postcard"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>