<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:layout_gravity="center">

    <ImageView
        android:id="@+id/selecteAsteroidImageView"
        android:src="@drawable/ic_new_releases_white_48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width = "match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/diameter"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/diameterTextView"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/velocity"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/velocityTextView"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/approach_date"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/approachDateTextView"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/miss_distance"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/missDistanceTextView"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

<TextView
    android:layout_marginTop="10dp"
    android:gravity="center_horizontal"
    android:textStyle="bold"
    android:textSize="24sp"
    android:id="@+id/isHazardousTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>